# atlaspack

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SHIP.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs  main.rs  pack.rs
tests/: cli_pack.rs
